@@ -1,5 +1,7 @@
 * What will be new in gsl-1.1:
 
+** Fixed bug in gsl_sf_hyperg_1F1_int
+
 ** Several routines for handling divided difference polynomials have
 been added to the poly/ directory.
 
